# ArguPaper

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  pyproject.toml
docs/: DONE.md  IMPLEMENTATION_PLAN.md  PRD.md  REQUIREMENTS.md  TASKS.md
src/argupaper/: AGENTS.override.md  __init__.py  config.py
src/argupaper/agents/: __init__.py  base.py  comparator.py  evidence.py  message.py  search.py  skeptic.py  support.py
src/argupaper/chains/: __init__.py  analysis.py  critique.py  debate.py  evidence.py
src/argupaper/cli/: __init__.py  commands.py  formatters.py
src/argupaper/extraction/: __init__.py  claim_checker.py  structured.py
src/argupaper/judge/: __init__.py  consensus.py
src/argupaper/llm/: __init__.py  client.py
src/argupaper/memory/: __init__.py  conversation.py  paper_store.py
src/argupaper/output/: __init__.py  report.py  structures.py
src/argupaper/pdf/: __init__.py  cache.py  exceptions.py  local_server.py  mineru_client.py  pipeline.py  types.py
src/argupaper/retrieval/: __init__.py  arxiv.py  query_expansion.py  semantic_scholar.py
src/argupaper/workflows/: __init__.py  analyze_paper.py  errors.py  models.py  search_agent.py  search_papers.py
tests/: __init__.py  conftest.py
tests/agents/: test_search.py
tests/chains/: __init__.py  test_debate.py
tests/cli/: test_commands.py
tests/integration/: test_analyze_workflow.py
tests/judge/: test_consensus.py
tests/pdf/: __init__.py  test_cache.py  test_local_server.py  test_mineru_client.py  test_pipeline.py
tests/workflows/: test_search_papers.py
(+2 files in other folders)
